# Calculator_Backend

./: .gitignore  Boost.cmake  CMakeLists.txt  Gtest.cmake  README.md  Rapidjson.cmake  build_boost.sh  compile_flags.txt  main.cpp
.github/workflows/: cmake.yml
CalculationPipe/: CalculationPipe.cpp  CalculationPipe.h
Calculator/: Calculator.h
Connection/: CMakeLists.txt  Connection.cpp  Connection.h  SyncWebsocketConnection.cpp  SyncWebsocketConnection.h
Enums/: OperationPriority.h  OperationType.h
InputDataConverter/: CMakeLists.txt  InputDataConverter.cpp  InputDataConverter.h
InputParser/: CMakeLists.txt  InputParser.h
Math/: CMakeLists.txt
Math/Binary/: CMakeLists.txt
Math/Binary/Calculator/: CMakeLists.txt  Calculator.cpp  Calculator.h
Math/Binary/Enums/: OperationID.h
Math/Binary/Parser/: CMakeLists.txt  Parser.cpp  Parser.h
Math/Binary/Pipe/: CMakeLists.txt  Pipe.cpp  Pipe.h
Math/CalculationPipe/: BinaryCalculationPipe.cpp  BinaryCalculationPipe.h  CMakeLists.txt  CalculationPipe.cpp  CalculationPipe.h  DecimalCalculationPipe.cpp  DecimalCalculationPipe.h
Math/Calculator/: BinaryCalculator.cpp  BinaryCalculator.h  CMakeLists.txt  Calculator.cpp
Math/Decimal/: CMakeLists.txt
Math/Decimal/Calculator/: CMakeLists.txt  Calculator.cpp  Calculator.h
Math/Decimal/DataConverter/: CMakeLists.txt  DataConverter.cpp  DataConverter.h
Math/Decimal/Enums/: OperationPriority.h  OperationType.h
Math/Decimal/Operand/: CMakeLists.txt  Operand.cpp  Operand.h
Math/Decimal/Operation/: CMakeLists.txt  Operation.cpp  Operation.h
Math/Decimal/Parser/: CMakeLists.txt  Parser.cpp  Parser.h
Math/Decimal/Pipe/: CMakeLists.txt  Pipe.cpp  Pipe.h
Math/Enums/: OperationID.h
Math/InputDataConverter/: CMakeLists.txt
Math/InputParser/: BinaryInputParser.cpp  BinaryInputParser.h  CMakeLists.txt  InputParser.cpp
Math/Operand/: CMakeLists.txt  Operand.h
Math/Operation/: CMakeLists.txt
Math/Pipe/: CMakeLists.txt  Pipe.cpp  Pipe.h
Operand/: CMakeLists.txt  Operand.cpp
Operation/: Operation.cpp  Operation.h
Router/: CMakeLists.txt  Router.cpp  Router.h
tests/: BinaryCalculationPipeTest.cpp  BinaryCalculatorTest.cpp  BinaryInputParserTest.cpp  CMakeLists.txt  CalculatorTest.cpp  InputDataConverterTest.cpp  InputParserTest.cpp  RouterTest.cpp
tests/binary/: CMakeLists.txt  CalculatorTest.cpp  ParserTest.cpp  PipeTest.cpp
tests/decimal/: CMakeLists.txt  CalculatorTest.cpp  DataConverterTest.cpp  ParserTest.cpp  PipeTest.cpp  main.cpp
tests/router/: CMakeLists.txt  RouterTest.cpp
